# GG_gestor_gastos

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt
